--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "webpack-dev-server": "^3.1.14"
   },
   "dependencies": {
-    "js-datepicker": "^5.18.0"
+    "js-datepicker": "^5.18.0",
+    "normalize.css": "^8.0.1"
   }
 }
